--- a/MVC.App/Views/Shared/_Layout.cshtml
+++ b/MVC.App/Views/Shared/_Layout.cshtml
@@ -22,11 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
                     </ul>
                 </div>
             </div>
+
+            @await Html.PartialAsync("_SelectLanguagePartial");
         </nav>
     </header>
     <div class="container">
