--- a/MVC.App/Views/Users/Details.cshtml
+++ b/MVC.App/Views/Users/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model MVC.App.Models.UserViewModel
+@inject LocService SharedLocalizer
 
 @{
     Layout = null;
@@ -18,13 +19,13 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NickName)
+            @SharedLocalizer.GetLocalizedHtmlString(nameof(UserViewModel.NickName))
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NickName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+            @SharedLocalizer.GetLocalizedHtmlString(nameof(UserViewModel.Email))
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
@@ -32,8 +33,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to form</a>
 </div>
 </body>
 </html>
