--- a/MVC.App/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/MVC.App/Views/Shared/_SelectLanguagePartial.cshtml
@@ -16,12 +16,10 @@
 
 <div title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
     <form class="form-inline" id="selectLanguage" asp-controller="SetLanguage" asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-horizontal" role="form">
-        <label class="form-label" style="padding-right:5px">@SharedLocalizer.GetLocalizedHtmlString("LANGUAGE"): </label>
         <div class="input-group">
-
             <select class="custom-select" name="culture" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
             <div class="input-group-append">
-                <button type="submit" class="btn btn-outline-secondary">@SharedLocalizer.GetLocalizedHtmlString("SAVE")</button>
+                <button type="submit" class="btn btn-outline-secondary">@SharedLocalizer.GetLocalizedHtmlString("save")</button>
             </div>
         </div>
     </form>
