--- a/MVC.App/Views/Users/Details.cshtml
+++ b/MVC.App/Views/Users/Details.cshtml
@@ -33,7 +33,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to form</a>
+    <a asp-action="Index">@SharedLocalizer.GetLocalizedHtmlString("backToForm")Back to form</a>
 </div>
 </body>
 </html>
