--- a/MVC.App/Views/Shared/_Layout.cshtml
+++ b/MVC.App/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            @await Html.PartialAsync("_SelectLanguagePartial");
+            @await Html.PartialAsync("_SelectLanguagePartial")
         </nav>
     </header>
     <div class="container">
