--- a/MVC.App/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/MVC.App/Views/Shared/_SelectLanguagePartial.cshtml
@@ -17,10 +17,7 @@
 <div title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
     <form class="form-inline" id="selectLanguage" asp-controller="SetLanguage" asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-horizontal" role="form">
         <div class="input-group">
-            <select class="custom-select" name="culture" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
-            <div class="input-group-append">
-                <button type="submit" class="btn btn-outline-secondary">@SharedLocalizer.GetLocalizedHtmlString("save")</button>
-            </div>
+            <select class="custom-select" name="culture" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems" onchange="this.form.submit()"></select>
         </div>
     </form>
 </div>
